5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1674_1872.log
== TEST (2019-04-28 19:45:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("insira a coordenada x: "))
y= float(input("insira a coordenada y: "))
if (x>0) and (y>0):
	print("Q1")
elif (x<0)and(y>0):
	print("Q2")
elif (x<0)and(y<0):
	print("Q3")
elif (x>0)and(y<0):
	print("Q4")
elif (x>0)and(y=0)
	print("Eixo X")
elif (x=0)and(y>0):
	print("Eixo Y")
elif (x=0)and(y=0):
	print("Origem")
-- ERROR:
File "XXXX", line 12
    elif (x>0)and(y=0)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:46:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("insira a coordenada x: "))
y= float(input("insira a coordenada y: "))
if (x>0) and (y>0):
	print("Q1")
elif (x<0)and(y>0):
	print("Q2")
elif (x<0)and(y<0):
	print("Q3")
elif (x>0)and(y<0):
	print("Q4")
elif (x>0)and(y=0):
	print("Eixo X")
elif (x=0)and(y>0):
	print("Eixo Y")
elif (x=0)and(y=0):
	print("Origem")
-- ERROR:
File "XXXX", line 12
    elif (x>0)and(y=0):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:46:34) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("insira a coordenada x: "))
y= float(input("insira a coordenada y: "))
if (x>0) and (y>0):
	print("Q1")
elif (x<0)and(y>0):
	print("Q2")
elif (x<0)and(y<0):
	print("Q3")
elif (x>0)and(y<0):
	print("Q4")
elif (x>0)and(y==0):
	print("Eixo X")
elif (x==0)and(y>0):
	print("Eixo Y")
elif (x==0)and(y==0):
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:48:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("insira a coordenada x: "))
y= float(input("insira a coordenada y: "))
if (x>0) and (y>0):
	print("Q1")
elif (x<0)and(y>0):
	print("Q2")
elif (x<0)and(y<0):
	print("Q3")
elif (x>0)and(y<0):
	print("Q4")
elif ((x>0)or(x<0))and(y==0):
	print("Eixo X")
elif (x==0)and((y>0)or(y<0)):
	print("Eixo Y")
elif (x==0)and(y==0):
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 19:48:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("insira a coordenada x: "))
y= float(input("insira a coordenada y: "))
if (x>0) and (y>0):
	print("Q1")
elif (x<0)and(y>0):
	print("Q2")
elif (x<0)and(y<0):
	print("Q3")
elif (x>0)and(y<0):
	print("Q4")
elif ((x>0)or(x<0))and(y==0):
	print("Eixo X")
elif (x==0)and((y>0)or(y<0)):
	print("Eixo Y")
elif (x==0)and(y==0):
	print("Origem")
-- EXECUTION TIME:
0.126053
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
